[project]
name = "roamresearch-client-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leechael Yim", email = "yanleech@gmail.com"},
]
dependencies = ["httpx[socks]>=0.28.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
