[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roamresearch-client-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leechael Yim", email = "yanleech@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "httpx[socks]>=0.28.1",
    "mcp[cli]>=1.8.0",
    "mistune>=3.1.3",
    "pendulum>=3.1.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ipython>=8.36.0",
    "pytest>=8.3.5",
]

[project.scripts]
rr = "roamresearch_client_py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roamresearch_client_py"]

[tool.hatch.build.targets.sdist]
include = [
    "src/roamresearch_client_py",
    "README.md",
    "pyproject.toml",
]

[tool.pdm.scripts]
start = "python -m src.roamresearch_client_py.cli mcp"
